<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/Negro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Imagen de Perfil -->
        <ImageView
            android:id="@+id/imagenPerfil"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/usuario"
            android:scaleType="centerCrop"
            android:layout_marginBottom="12dp"
            android:background="@android:color/darker_gray"
            android:elevation="4dp"
            android:clipToOutline="true"/>

        <!-- Botón para cambiar foto -->
        <Button
            android:id="@+id/btnCambiarFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/azul"
            android:text="@string/cambiar_foto"
            android:layout_marginBottom="20dp"/>

        <!-- Campo Nombre -->
        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nonbree"
            android:textSize="16sp"
            android:padding="12dp"
            android:background="@color/blanco"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidoo"
            android:textSize="16sp"
            android:padding="12dp"
            android:background="@color/blanco"
            android:layout_marginBottom="10dp"/>

        <!-- Campo Correo -->
        <EditText
            android:id="@+id/edtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Correoo"
            android:textSize="16sp"
            android:padding="12dp"
            android:background="@color/blanco"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"/>

        <!-- Campo Teléfono -->
        <EditText
            android:id="@+id/edtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/TelefonoPeril"
            android:textSize="16sp"
            android:padding="12dp"
            android:background="@color/blanco"
            android:layout_marginBottom="20dp"
            android:inputType="phone"/>

        <!-- Botón Guardar Cambios -->
        <Button
            android:id="@+id/btnGuardarCambios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar_cambios"
            android:backgroundTint="@color/azul"
            android:textColor="@color/blanco"/>

    </LinearLayout>
</ScrollView>
