<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azuloscuro"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        android:gravity="center"

        >

        <ImageView
            android:id="@+id/Logoapp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/logop" />

        <TextView
            android:id="@+id/textViewNombreap"
            android:layout_width="154dp"
            android:layout_height="51dp"
            android:fontFamily="@font/adlam_display"
            android:text="@string/nombre_app"
            android:textColor="@color/blanco"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/textInstructivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextoInstructivo"
            android:fontFamily="@font/abyssinica_sil"
            android:textColor="@color/blanco"
            android:layout_marginBottom="20dp"

            />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NombreUsuario"
            android:textSize="15sp"
            android:textColor="@color/blanco"/>

        <EditText
            android:id="@+id/NombreUsuario"
            style="@style/EditTexRounded"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:fontFamily="@font/abyssinica_sil"
            android:inputType="text"
            android:textSize="15sp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Apellido"
            android:textSize="15sp"
            android:textColor="@color/blanco" />

        <EditText
            android:id="@+id/Apellido"
            style="@style/EditTexRounded"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="15sp"/>


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Correo"
            android:textSize="15sp"
            android:textColor="@color/blanco"/>

        <EditText
            android:id="@+id/correo"
            style="@style/EditTexRounded"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/abyssinica_sil"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ingresa una contraseña"
            android:textColor="@color/blanco"
            android:textSize="15sp"
            />


        <EditText
            android:id="@+id/PasswordU"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            style="@style/EditTexRounded"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TelefonoConfirmacion"
            android:textSize="15sp"
            android:textColor="@color/blanco" />

        <EditText
            android:id="@+id/textPassword"
            style="@style/EditTexRounded"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/abyssinica_sil"
            android:ems="10"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Telefono"
            android:textSize="15sp"
            android:textColor="@color/blanco" />

        <EditText
            android:id="@+id/telefono"
            style="@style/EditTexRounded"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/abyssinica_sil"
            android:ems="10"
            android:textSize="15sp"
            android:inputType="phone"
            android:layout_marginBottom="15dp"
            />


        <CheckBox
            android:id="@+id/Terminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blanco"
            android:text="@string/Terminos" />

        <Button
            android:id="@+id/buttonRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            android:backgroundTint="@color/azul"
            android:textColor="@color/blanco"
            android:fontFamily="@font/abyssinica_sil"
            android:textSize="18sp"

            />




    </LinearLayout>
</ScrollView>
