<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azuloscuro">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="228dp"
        android:layout_height="187dp"
        android:layout_marginTop="68dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewnombreapph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewnombreapph"
        android:layout_width="274dp"
        android:layout_height="74dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/nombre_app"
        android:textColor="@color/blanco"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewcuerpo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewcuerpo"
        android:layout_width="281dp"
        android:layout_height="93dp"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/Cuerpo"
        android:textColor="@color/blanco"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <Button
        android:id="@+id/buttonComienza1"
        android:layout_width="235dp"
        android:layout_height="68dp"
        android:layout_marginBottom="128dp"
        android:backgroundTint="@color/blanco"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/Comienza"
        android:textColor="@color/azulosnegro"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewcuerpo"
        app:layout_constraintVertical_bias="1.0"
        app:strokeColor="#223962"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/registrarHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/registro"
        android:textColor="@color/azul"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonComienza1"
        app:layout_constraintVertical_bias="0.682" />
</androidx.constraintlayout.widget.ConstraintLayout>