<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azuloscuro"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp"
        android:gravity="center"

        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/logop" />

        <TextView
            android:id="@+id/textView"

            android:layout_width="300dp"
            android:layout_height="120dp"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:text="@string/RecuperarcontrasenaText"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/abyssinica_sil"/>

        <TextView
            android:id="@+id/ingresacorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Correo"
            android:textColor="@color/blanco"
            android:layout_marginBottom="18dp"
            android:textSize="20sp"
            android:fontFamily="@font/abyssinica_sil"/>

        <EditText
            android:id="@+id/Email"
            style="@style/EditTexRounded"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:ems="10"
            android:fontFamily="@font/abyssinica_sil"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/buttoenviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviaSolicitudCambiooPeril"
            android:backgroundTint="@color/blanco"
            android:textColor="@color/Negro"
            android:textSize="20sp"
            android:fontFamily="@font/abyssinica_sil"
            app:strokeColor="@color/azulosnegro"
            app:strokeWidth="3dp"
            />


    </LinearLayout>
</ScrollView>
